--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/shivjisakina/Bamazon#readme",
   "dependencies": {
+    "cli-table": "^0.3.1",
+    "cliui": "^3.2.0",
     "inquirer": "^3.1.1",
     "mysql": "^2.13.0"
   }
